--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
     </div>
     <footer>
         <div>
-            <p>@derechos reservados </p>
+            <p>@derechos reservados kkk</p>
         </div>
     </footer>
 </div>
