index y gato principal

--- a/Index.html
+++ b/Index.html
@@ -7,27 +7,20 @@
     <body>
     <div>
     <header>
-        <h1>ONG - AYUDA A UN PELUDO</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</p>
-        <h2>Nuestros Integrantes:</h2>
+        <h1><font face=”Arial”></font><center>ONG - AYUDA A UN PELUDO</center></font></h1>
+        <p><left>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit minus quisquam at eaque atque, quas architecto. A tenetur aliquam voluptates modi fugiat in adipisci, ipsum deserunt possimus, dolores, ex temporibus!            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</left></p>
+        <h2><center>Nuestros Integrantes:</center></h2>
         <ul>
-            <li>Daniel Acevedo</li>
-            <li>Enrique Garcia</li>
+            <li>Daniel Acevedo - Cargo 1</li>
+            <li>Enrique Garcia - Cargo 2</li>
         </ul>        
         
-        <img src="C:\Users\moite\Pictures\Screenshots\Captura de pantalla 2023-03-05 014455.png" alt="Imagen1" />
-        <img src="C:\Users\moite\Pictures\Screenshots\Captura de pantalla 2023-03-05 014455.png" alt="Imagen1" />
-        <nav>
-            <ul>
-                <li><a href="#">Gatos </a></li>
-                <li><a href="#">Perros</a></li>
-            </ul>
-        </nav>
+        <h2><center>Nuestras secciones de ayuda: </center></h2>
+            <img align="left" src="C:\Users\moite\Pictures\Screenshots\Captura de pantalla 2023-03-05 014455.png" alt="Imagen1" /><br><br><br><br><left><a href="C:\Users\moite\Desktop\1er SEMESTRE 2\PROGRAMACION WEB\Actividad 1.2\PGY32121-2\gato.html">Gatos </a></left></div><br><br><br><br><br>
+            <img align="left" src="C:\Users\moite\Pictures\Screenshots\Captura de pantalla 2023-03-05 014455.png" alt="Imagen1" /><br><br><br><br><a href="#">Perros</a></div><br><br><br><br><br>
+
     </header>
-    <div>
-        <p>Hola esta es una p&aacute;gina de prueba</p>
-        <img src="C:\Users\moite\Pictures\Screenshots\Captura de pantalla 2023-03-05 014455.png" alt="Imagen1" />
-    </div>
+
     <footer>
         <div>
             <p>@derechos reservados asdasdasdasdadasd </p>
