--- a/gato.html
+++ b/gato.html
@@ -18,7 +18,7 @@
 
     <footer>
         <div>
-            <p>@derechos reservados asdasdasdasdadasd </p>
+            <p>@derechos reservados</p>
         </div>
     </footer>
 </div>
