--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
 
     <footer>
         <div>
-            <p>@derechos reservados asdasdasdasdadasd </p>
+            <p>@derechos reservados</p>
         </div>
     </footer>
 </div>
