--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,8 @@
         </ul>        
         
         <h2><center>Nuestras secciones de ayuda: </center></h2>
-            <img align="left" src="C:\Users\moite\Pictures\Screenshots\Captura de pantalla 2023-03-05 014455.png" alt="Imagen1" /><br><br><br><br><left><a href="C:\Users\moite\Desktop\1er SEMESTRE 2\PROGRAMACION WEB\Actividad 1.2\PGY32121-2\gato.html">Gatos </a></left></div><br><br><br><br><br>
-            <img align="left" src="C:\Users\moite\Pictures\Screenshots\Captura de pantalla 2023-03-05 014455.png" alt="Imagen1" /><br><br><br><br><a href="#">Perros</a></div><br><br><br><br><br>
+            <img align="left" src="C:\Users\moite\Pictures\Screenshots\Captura de pantalla 2023-03-05 014455.png" alt="Imagen1" /><br><br><br><br><left><a href="C:\Users\enriq\OneDrive\Documentos\3er Semestre\Programación Web\Actividad1.2\PGY32121\gato.html">Gatos </a></left></div><br><br><br><br><br>
+            <img align="left" src="C:\Users\moite\Pictures\Screenshots\Captura de pantalla 2023-03-05 014455.png" alt="Imagen1" /><br><br><br><br><a href="C:\Users\enriq\OneDrive\Documentos\3er Semestre\Programación Web\Actividad1.2\PGY32121\perros.html">Perros</a></div><br><br><br><br><br>
 
     </header>
 
