--- a/Niña.html
+++ b/Niña.html
@@ -13,11 +13,11 @@
 
     <div>
         <ol>
-            <p>Nombre: Cachulo</p> 
-            <p>Edad: 4 años</p> 
-            <p>Genero: Macho</p>
+            <p>Nombre: Niña</p> 
+            <p>Edad: 1 año</p> 
+            <p>Genero: Hembra</p>
             <p>Esterelizado: si</p> 
-            <p>Nro. de Chip: 334478921</p>  
+            <p>Nro. de Chip: 33447921</p>  
         </ol>
     </div>
 </div>
