--- a/Index copy.html
+++ b/Index copy.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-    </head>
         <meta charset ="uft-8">
+        <link href="estilo.css" rel="stylesheet">
         <title>Ayuda a un peludo</title>
+    </head>
+
     <body>
     <div id="lat">
         <a href="C:\Users\enriq\OneDrive\Documentos\3er Semestre\Programación Web\Actividad1.2\PGY32121\Lucyfer.html">Inicio</a>
