imagenes cargadas mejor

--- a/Cachulo.html
+++ b/Cachulo.html
@@ -8,7 +8,7 @@
     <body>
     <div>
     <header>
-        <img align="left" src="C:\Users\enriq\OneDrive\Documentos\3er Semestre\Programación Web\Actividad1.2\PGY32121\Cachulo.html" alt="Imagen1" /><br><br><br><br><a href="#"></a></div><br><br><br><br><br><br>
+        <img align="left" src="cachulo.jpg" alt="Imagen1" /><br><br><br><br><a href="#"></a></div><br><br><br><br><br><br>
     </header>
 
     <div>
