--- a/menu.html
+++ b/menu.html
@@ -16,8 +16,8 @@
         </ul>        
         
         <h2><center>Nuestras secciones de ayuda: </center></h2>
-            <img align="left" src="niña.jpg" alt="Imagen1" /><br><br><br><br><left><a href="gato.html">Gatos </a></left></div><br><br><br><br><br>
-            <img align="left" src="Lucyfer.jpg" alt="Imagen1" /><br><br><br><br><a href="perros.html">Perros</a></div><br><br><br><br><br>
+            <img align="left" src="Lucyfer.jpg" alt="Imagen1" /><br><br><br><br><left><a href="gato.html">Gatos </a></left></div><br><br><br><br><br>
+            <img align="left" src="flaca.jpg" alt="Imagen1" /><br><br><br><br><a href="perros.html">Perros</a></div><br><br><br><br><br>
 
     </header>
 
