--- a/Index.html
+++ b/Index.html
@@ -18,19 +18,39 @@
         <header>
             <div id="tituo_1">
                 <h1>Lorem ipsum dolor</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit minus quisquam at eaque atque, quas architecto. A tenetur aliquam voluptates modi fugiat in adipisci, ipsum deserunt possimus, dolores, ex temporibus!            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Fugit minus quisquam at eaque atque, quas architecto. 
+                    A tenetur aliquam voluptates modi fugiat in adipisci, ipsum deserunt possimus, dolores, ex temporibus!            
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. 
+                    Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</p>
             </div>
             <div id="tituo_2">
                 <h1>Proin sed aliquet</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit minus quisquam at eaque atque, quas architecto. A tenetur aliquam voluptates modi fugiat in adipisci, ipsum deserunt possimus, dolores, ex temporibus!            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Fugit minus quisquam at eaque atque, quas architecto. 
+                    A tenetur aliquam voluptates modi fugiat in adipisci, ipsum deserunt possimus, dolores, ex temporibus!            
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. 
+                    Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</p>
             </div>
             <div id="tituo_3">
                 <h1>Sed consectetur neque</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit minus quisquam at eaque atque, quas architecto. A tenetur aliquam voluptates modi fugiat in adipisci, ipsum deserunt possimus, dolores, ex temporibus!            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Fugit minus quisquam at eaque atque, quas architecto. 
+                    A tenetur aliquam voluptates modi fugiat in adipisci, ipsum deserunt possimus, dolores, ex temporibus!            
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. 
+                    Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</p>
             </div>
             <div id="tituo_4">
                 <h1>Nulla tempor laoreet</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit minus quisquam at eaque atque, quas architecto. A tenetur aliquam voluptates modi fugiat in adipisci, ipsum deserunt possimus, dolores, ex temporibus!            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</p>  
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Fugit minus quisquam at eaque atque, quas architecto. 
+                    A tenetur aliquam voluptates modi fugiat in adipisci, ipsum deserunt possimus, dolores, ex temporibus!            
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. 
+                    Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</p>  
             </div>
             
         </header>
