--- a/Gynger.html
+++ b/Gynger.html
@@ -8,7 +8,7 @@
     <body>
     <div>
     <header>
-        <img align="left" src="gynger.jpg" alt="Imagen2" /><br><br><br><br><a href="#"></a></div><br><br><br><br><br><br>
+        <img align="left" src="gynger.jpg" width="300" height="300" alt="Imagen2" /><br><br><br><br><a href="#"></a></div><br><br><br><br><br><br>
     </header>
 
     <div>
