--- a/perros.html
+++ b/perros.html
@@ -11,9 +11,9 @@
         <h1><font face=”Arial”></font><center>PERROS EN ADOPCIÓN</center></font></h1>
         <p><left>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit minus quisquam at eaque atque, quas architecto. A tenetur aliquam voluptates modi fugiat in adipisci, ipsum deserunt possimus, dolores, ex temporibus!            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora dolore quis, nam quod, iure iusto, amet aut dolorem recusandae assumenda accusamus. Eaque sit totam vero suscipit architecto cupiditate laudantium! Nam.</left></p>
         <h2><center>Nuestros perros que buscan familia :</center></h2>
-            <img align="left" src="cachulo.jpg" alt="Imagen1" /><br><br><br><br><left><a href="Cachulo.html">Cachulo </a></left></div><br><br><br><br><br>
-            <img align="left" src="niña.jpg" alt="Imagen1" /><br><br><br><br><a href="Niña.html">Niña</a></div><br><br><br><br><br><br>
-            <img align="left" src="flaca.jpg" alt="Imagen1" /><br><br><br><br><a href="Flaca.html">Flaca</a></div><br><br><br><br><br><br>
+            <img align="left" src="cachulo.jpg" width="200" height="200" alt="Imagen1"/><br><br><br><br><br><br><left><a href="Cachulo.html">Cachulo</a></left><br><br><br><br><br><br><br><br>
+            <img align="left" src="niña.jpg" width="200" height="200" alt="Imagen1"/><br><br><br><br><br><br><left><a href="Niña.html">Niña</a></left><br><br><br><br><br><br><br><br>
+            <img align="left" src="flaca.jpg" width="200" height="200" alt="Imagen1"/><br><br><br><br><br><br><left><a href="Flaca.html">Flaca</a></left><br><br><br><br><br><br><br><br>
     </header>
 
     <footer>
