--- a/Flaca.html
+++ b/Flaca.html
@@ -8,7 +8,7 @@
     <body>
     <div>
     <header>
-        <img align="left" src="flaca.jpg" alt="Imagen1" /><br><br><br><br><a href="#"></a></div><br><br><br><br><br><br>
+        <img align="left" src="flaca.jpg" width="300" height="300" alt="Imagen1" /><br><br><br><br><a href="#"></a></div><br><br><br><br><br><br>
     </header>
 
     <div>
