--- a/Tommy.html
+++ b/Tommy.html
@@ -8,7 +8,7 @@
     <body>
     <div>
     <header>
-        <img align="left" src="tommy.jpg" alt="Imagen1" /><br><br><br><br><a href="#"></a></div><br><br><br><br><br><br>
+        <img align="left" src="tommy.jpg" width="300" height="350" alt="Imagen1" /><br><br><br><br><a href="#"></a></div><br><br><br><br><br><br>
     </header>
 
     <div>
