--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
         <title>Ayuda a un peludo</title>
     </head>
 
-    <body class = "grid-container" >
+    <body class = "container" >
         <div class = "sidebar" id="menu">
             <ul>
             <li><a href="menu.html">Inicio</a></li>
