--- a/Index.html
+++ b/Index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset ="uft-8">
-        <link href="estilo.css" rel="stylesheet">
+        <!--<link href="estilo.css" rel="stylesheet">-->
         <title>Ayuda a un peludo</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     </head>
 
     <body class = "container" >
