--- a/Cachulo.html
+++ b/Cachulo.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html>
-    <head>
-    </head>
-        <meta charset ="uft-8">
-        <title></title>
-        
-    <body>
-    <div>
-    <header>
-        <img align="left" src="cachulo.jpg" width="300" height="300" alt="Imagen1" /><br><br><br><br><a href="#"></a></div><br><br><br><br><br><br>
-    </header>
-
-    <div>
-        <ol>
-            <p>Nombre: Cachulo</p> 
-            <p>Edad: 4 años</p> 
-            <p>Genero: Macho</p>
-            <p>Esterelizado: si</p> 
-            <p>Nro. de Chip: 334478921</p>  
-        </ol>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mi página con Cachulo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js" integrity="sha512-PzslhzwWm48lkzv/A9YhY62E1Cva4wZh4vQgl+J0dLyjrT41TcqS8ucvok9zTVyA+uDd3q58wflBv6gbJTD6Ug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  </head>
+  <body>
+    <div class="container mt-5">
+      <div class="card">
+        <div class="card-header bg-light">
+          <img src="cachulo.jpg" width="300" height="300" alt="Cachulo" class="me-3">
+          <h1 class="card-title">Cachulo</h1>
+        </div>
+        <div class="card-body">
+          <h2 class="card-subtitle mb-3">Información general</h2>
+          <ul class="list-group mb-3">
+            <li class="list-group-item"><strong>Nombre:</strong> Cachulo</li>
+            <li class="list-group-item"><strong>Edad:</strong> 4 años</li>
+            <li class="list-group-item"><strong>Género:</strong> Macho</li>
+            <li class="list-group-item"><strong>Esterilizado:</strong> Sí</li>
+            <li class="list-group-item"><strong>Número de chip:</strong> 334478921</li>
+          </ul>
+          <h2 class="card-subtitle mb-3">Descripción</h2>
+          <p class="card-text">Cachulo es un perro muy cariñoso y juguetón. Le encanta jugar con la pelota y salir a pasear por el parque.</p>
+          <h2 class="card-subtitle mb-3">Contacto</h2>
+          <p class="card-text">Si estás interesado en adoptar a Cachulo, por favor contáctanos en el teléfono 555-1234 o envíanos un correo electrónico a adopciones@refugio.com</p>
+        </div>
+      </div>
     </div>
-</div>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js" integrity="sha512-2ryKjU5ah6wZ0JpIsEN+Ufuy6WU9XnE1NSmrNnPNryUQK5U6D5wGmLp1xK/6kiWfRNmdRvMgB36P98rHrGJ56Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  </body>
 </html>
