--- a/Index.html
+++ b/Index.html
@@ -1,50 +1,61 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset ="uft-8">
-        <link href="estilo.css" rel="stylesheet">
+        <meta charset="utf-8">
         <title>Ayuda a un peludo</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+        <!-- CSS de Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js" integrity="sha512-PzslhzwWm48lkzv/A9YhY62E1Cva4wZh4vQgl+J0dLyjrT41TcqS8ucvok9zTVyA+uDd3q58wflBv6gbJTD6Ug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- CSS personalizado -->
+        <link href="estilo.css" rel="stylesheet">
     </head>
-
     <body>
-
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <!--<a class="navbar-brand" href="#">Navbar</a>-->
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=menu.html>INCIO</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=nosotros.html>NOSOTROS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=adopta.html>ADOPTA</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=colabora.html>COLABORA</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=servicios.html>SERVICIOS</a>
-                  </li>
-                </ul>
-              </div>
+                <a class="navbar-brand" href="#">Ayuda a un peludo</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="adopta.html">Adopta</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="colabora.html">Colabora</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="servicios.html">Servicios</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </nav>
-    </body>      
+        </nav>
 
-    <footer>
-        <div>
-            <p>@derechos reservados</p>
-        </div>
-    </footer>
-    </div>
-
-
-    </body>
-</html>
+        <div class="container my-5">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="niña.jpg" class="d-block w-100" alt="Mascota 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="Lucyfer.jpg" class="d-block w-100" alt="Mascota 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="gynger.jpg" class="d-block w-100" alt="Mascota 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="tommy.jpg" class="d-block w-100" alt="Mascota 4">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="flaca.jpg" class="d-block w-100" alt="Mascota 5">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="cachulo.jpg" class="d-block w-100" alt="Mascota 6">
+                    </div>
+                </div>
